--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link href="css/app.css" rel="stylesheet">
-    <link href="css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -389,12 +390,13 @@
 
     <section class="clients">
         <div class="container">
-            <div class="text-container center">
-                <h1>  ... AND WHY THEY TRUSTED US BEFORE  </h1>
+            <div class="text-container center trusted">
+                <h1 class="darkgreen">  ... AND WHY THEY TRUSTED US BEFORE  </h1>
             </div>
         </div>
         <div class="container">
-                <div class="col-xs-6 col-md-3 logo">
+
+            <div class="col-xs-6 col-md-3 logo">
                 <img src="images/logo/carrefour.png" class="img-responsive">
             </div>
             <div class="col-xs-6 col-md-3 logo">
@@ -406,6 +408,8 @@
             <div class="col-xs-6 col-md-3 logo">
                 <img src="images/logo/tele2-mobile.png" class="img-responsive">
             </div>
+
+
             <div class="col-xs-6 col-md-3 logo">
                 <img src="images/logo/virginmobile-france.png" class="img-responsive">
             </div>
@@ -418,59 +422,96 @@
             <div class="col-xs-6 col-md-3 logo">
                 <img src="images/logo/numen_logo.png" class="img-responsive">
             </div>
-            <div class="col-xs-6 col-md-3 logo">
+
+            <div class="col-xs-6 col-md-3 logo-last-row">
                 <img src="images/logo/EDF_logo.png" class="img-responsive">
             </div>
-            <div class="col-xs-6 col-md-3 logo">
+            <div class="col-xs-6 col-md-3 logo-last-row">
                 <img src="images/logo/webdrone.png" class="img-responsive">
             </div>
-            <div class="col-xs-6 col-md-3 logo">
+            <div class="col-xs-6 col-md-3 logo-last-row">
                 <img src="images/logo/logo-docapost-poste-OK.png" class="img-responsive">
             </div>
+
         </div>
     </section><!--  END JUMBOTRON -->
 	<section class="contactus" id="contactus">
         <div class="container text-content" >
-            <div class="text-container center">
-                <h1 class="uppercase"> Let's see how we can help you  </h1>
+            <div class="text-container center help">
+                <h1 class="uppercase darkgreen"> Let's see how we can help you  </h1>
             </div>
             <form data-request="contactform::onSend" data-request-validate data-request-flash  id="contact-form">
                 <div class="row">
-                    <div class="col-xs-12 col-md-6">
+                    <div class="col-xs-12 col-md-4">
                         <div class="form-group">
                             <input class="form-control" type="text" placeholder="Fullname" name="fullname">
-                            <span data-validate-for="fullname">Please enter your fullname</span>
+                            <!--<span data-validate-for="fullname">Please enter your fullname</span>-->
                         </div>
 
                     </div>
-                    <div class="col-xs-12 col-md-6">
+                    <div class="col-xs-12 col-md-4">
                         <div class="form-group">
                             <input class="form-control" type="text" placeholder="Email" name="email">
-                            <span data-validate-for="email">Please enter a valid email</span>
+                            <!--<span data-validate-for="email">Please enter a valid email</span>-->
                         </div>
                     </div>
+					<div class="col-xs-12 col-md-4">
+						<h3 class="uppercase darkgreen">Contact</h3>
+					</div>
                 </div>
                 <div class="row">
-                    <div class="col-xs-12 col-md-6">
+                    <div class="col-xs-12 col-md-4">
                         <div class="form-group">
                             <input class="form-control" type="text" placeholder="Company" name="company_name">
-                            <span data-validate-for="company_name">Please enter your company name</span>
+                            <!--<span data-validate-for="company_name">Please enter your company name</span>-->
                         </div>
                     </div>
-                    <div class="col-xs-12 col-md-6">
+                    <div class="col-xs-12 col-md-4">
                         <div class="form-group">
                             <input class="form-control" type="text" placeholder="Phone" name="phonenumber">
-                            <span data-validate-for="phonenumber">Please enter your company phone number</span>
+                            <!--<span data-validate-for="phonenumber">Please enter your company phone number</span>-->
                         </div>
                     </div>
+					<div class="col-xs-12 col-md-4">
+						<div class="contact-info">
+							<div class="contact-info-row">
+								<i class="material-icons">email</i> contact@manaty.net
+							</div>
+						</div>
+					</div>
+                </div>
+				<div class="row">
+                    <div class="col-xs-12 col-md-4">
+                        <div class="form-group">
+                            <input class="form-control" type="text" placeholder="Location" name="location">
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-md-4">
+                        <div class="form-group">
+                            <input class="form-control" type="text" placeholder="Skype" name="skypeID">
+                        </div>
+                    </div>
+					<div class="col-xs-12 col-md-4">
+						<div class="contact-info">
+							<div class='contact-info-row'>
+								<i class="material-icons">local_phone</i> +33 6 98 98 98
+							</div>
+						</div>
+					</div>
                 </div>
                 <div class="row">
-                    <div class="col-xs-12 col-md-12">
+                    <div class="col-xs-12 col-md-8">
                         <div class="form-group">
                             <textarea class="form-control" rows="10" placeholder="Message" name="content"></textarea>
                             <span data-validate-for="content">Please enter your content</span>
                         </div>
                     </div>
+					<div class="col-xs-12 col-md-4">
+
+						<div class='contact-info-row'>
+							<i class="fa fa-skype" style="font-size: 24px;"></i> skypeID
+						</div>
+					</div>
                 </div>
                 <div class="row">
                     <div class="form-group">
