changed the contact style for responsive

--- a/index.html
+++ b/index.html
@@ -233,24 +233,27 @@
 	<!-- END SERVICES -->
 
 	<!-- SECTION GLOBE -->
+	<div class="container-fluid globe-container">
+		<section class="globe" id="where">
+			<div class="container-fluid text-content" >
+				<div class="text-container center">
+					<h1 class="white">  We operate all over the world  </h1>
+				</div>
+				<div class="images-container-center center">
+	                <img src="images/globe.png" class="img-responsive">
+	            </div>
+				<div class="container-fluid center">
+	                <p>  Our highly scalable and cost effective resources and our data production centers are present in all continents: Laos, Argentina, China, France, India, Lithuania, Mexico, Morocco,  Philippines, Romania, Tunisia, Vietnam, USA, Jordan </p>
+	                <p class="padded-big-top">  Our tools are entirely in the cloud which allow us to work</p>
+	                <h1 class="white">  24/7 - 7 days a week  </h1>
+	            </div>
+				<!--<img src="images/world_map.png" class="img-responsive">-->
+	        </div>
+			<!--<div class="container relative border">
 
-	<section class="globe" id="where">
-		<div class="container-fluid text-content" >
-			<div class="text-container center">
-				<h1 class="white">  We operate all over the world  </h1>
-			</div>
-			<div class="images-container-center center">
-                <img src="images/globe.png" class="img-responsive">
-            </div>
-			<div class="container-fluid center">
-                <p>  Our highly scalable and cost effective resources and our data production centers are present in all continents: Laos, Argentina, China, France, India, Lithuania, Mexico, Morocco,  Philippines, Romania, Tunisia, Vietnam, USA, Jordan </p>
-                <p class="padded-big-top">  Our tools are entirely in the cloud which allow us to work</p>
-                <h1 class="white">  24/7 - 7 days a week  </h1>
-            </div>
-			<!--<img src="images/world_map.png" class="img-responsive">-->
-        </div>
+			</div>-->
 
-    </section>
+	</div>
 	<!-- END GLOBE SECTION -->
 
 	<!-- FIGURES SECTION -->
@@ -443,7 +446,7 @@
 						</div>
 						<div class="row">
 							<div class='contact-info-row mt-4'>
-								<span><strong>MANATY SARL</strong></span><br />
+								<span class="font-weight-bold">MANATY SARL</span><br />
 								2 Rue de l'Etang du Moulin<br />
 								21250 Glanon <br />
 								France
@@ -468,6 +471,38 @@
 
 					</div>
                 </div>
+				<div class="row">
+					<div class="col-12 d-col-block d-md-none">
+						<h3 class="uppercase darkgreen">Contact</h3>
+					</div>
+					<div class="col-12 d-col-block d-md-none">
+						<div class="contact-info">
+							<div class="contact-info-row">
+								<i class="material-icons">email</i> contact@manaty.net
+							</div>
+						</div>
+					</div>
+					<div class="col-12 d-col-block d-md-none">
+						<div class="contact-info">
+							<div class='contact-info-row'>
+								<i class="material-icons">local_phone</i> +33 6 98 98 98
+							</div>
+						</div>
+					</div>
+					<div class="col-12 d-col-block d-md-none">
+						<div class='contact-info-row'>
+							<i class="fa fa-skype" style="font-size: 32px; color: #00AFF0;"></i> skypeID
+						</div>
+					</div>
+					<div class="col-12 d-col-block d-md-none mt-2">
+						<p>
+							<span class="font-weight-bold">MANATY SARL</span><br />
+							2 Rue de l'Etang du Moulin<br />
+							21250 Glanon <br />
+							France
+						</p>
+					</div>
+				</div>
 				<div class="row">
                     <div class="col-12 col-md-8 text-center">
                         <button class="btn btn-custom primary center " type="submit" data-attach-loading > SEND </button>
