display popup in mobile only

--- a/index.html
+++ b/index.html
@@ -124,7 +124,97 @@
 				We build the engine that will run your business from product and service design, ordering, fulfillment, billing to cash collection
 			</div>
 		</div>
-		<div class="services-icons">
+		<!-- browser -->
+		<div class="services-icons d-none d-md-block">
+			<div class="service-icons-container" data-title="Studies, conception & proofs of concept" >
+				<div class="icon" data-description="<p>  Manaty federates more than thirty specialists of software development around the world. Most of them are seniors with more than 10 years of experience with both technical and functional expertise in various fields (Java, JavaScript, PHP, Android, iOs; SQL and NoSQL, Reporting, data mining,  Cloud solutions…) and industries (Telecom, Media, Finance, Retail, Health…). </p>  <p> Some of our experts are PhD researchers that can offer their services and knowledge for your research and study needs. We can counsel you or even realize a complete and precise study on your subject.  </p>  <p>  We received a french certification for R&D studies that is valid until 2019 (certification CIR).</p>"
+				    data-title="Studies, conception & proofs of concept">
+					<img src="images/icon_software.png" alt="" class="img-responsive">
+				</div>
+				<h1> Company Software Development</h1>
+			</div>
+
+			<div class="service-icons-container" data-title="Website Development">
+				<div class="icon" data-description="<p>We are proficient in website development and web application development (B2C and B2B). </p>
+					  <p> Whether you want us to make your website from scratch or to update and improve an already existing website, we provide you with a turnkey solution focused on your business goals. We master all web languages and web technologies: Javascript, responsive CSS, PHP, JavaEE, all kinds of CMS and eShops…</p>
+					  <p> We can also develop tailor made web applications that will fulfill your needs. We use the latest technologies and standards :  REST API, SSO, SQL & NoSQL, asynchrone programming. </p>
+					  <p> We adapt to your project to :</p>
+					  <ul>
+					  <li>Develop your solution from A to Z</li>
+					  <li>Counsel you on the best technologies to use at every steps</li>
+					  <li>Provide you with serious QA</li>
+					  <li>Train your team and ensure that you master your new solution</li>
+					  <li>Maintain your solution and accompagny you for future enhancements</li>
+					  </ul>" data-title="Website Development">
+					<img src="images/icon_webDev.png" alt="" class="img-responsive">
+				</div>
+				<h1>Website Development</h1>
+			</div>
+
+			<div class="service-icons-container" data-title="Mobile Development">
+				<div class="icon" data-description="<p>We design and realize your mobile applications for all kinds of screens (smartphone and tablets), all mobile operating systems (Android, iOS, Windows mobile) and all purposes (general public applications for B2C and complex and precise applications for B2B).</p>
+				  <p>If that suits your business, we make sure that your mobile application easily adapt to any web browser on any screen. We are familiar with all interfaces,  any way of interacting (visual control, vocal control, interactive touch screen…) and the latest frameworks (Appcelerator, Cordova).</p>
+				  <p> We adapt to your project to :</p>
+				  <ul>
+				  <li> Make a prototype of your application and validate with you all technical choices</li>
+				  <li> Define the architecture, the ergonomics and the basis for development</li>
+				  <li> Develop your application following the guidelines you validated</li>
+				  <li> Publish your application on the stores</li>
+				  <li> Maintain your application and accompagny you for future evolutions </li>
+				  </ul>" data-title="Mobile Development">
+					<img src="images/icon_mobileDev.png" alt="" class="img-responsive">
+				</div>
+				<h1>Mobile Development</h1>
+			</div>
+
+			<div class="service-icons-container" data-title="Desktop Development">
+				<div class="icon" data-title="Desktop Development" data-description="<p>Whether you need a standalone software for peer 2 peer communication (BitTorrent…), a blockchain processing (Bitcoins…) or an images/video processing, we can deliver multi-OS easy to deploy desktop applications.</p>
+				  <p>We adapt to your project to :</p>
+				  <ul>
+					  <li> Develop your solution from A to Z </li>
+					  <li> Counsel you on the best technologies to use at every step</li>
+					  <li> Provide you with serious QA</li>
+					  <li> Train your teams and ensure that you master your new solution</li>
+					  <li> Maintain your solution and accompany you for future evolutions</li>
+				  </ul>">
+					<img src="images/icon_appCycle.png" alt="" class="img-responsive">
+				</div>
+				<h1> Application Lifecyle Management </h1>
+			</div>
+
+			<div class="service-icons-container" data-title="Chatbot and AI">
+				<div class="icon" data-title="Chatbot and AI" data-description="<p>We help you with your AI solution for maximum operational effectiveness. We have a strong experience with deep learning and automation technologies. </p> <p> We can also counsel you for your chatbot solution and develop a customized entity that suits perfectly your business. </p>">
+					<img src="images/icon_chatbot.png" alt="" class="img-responsive">
+				</div>
+				<h1> Chatbot and AI </h1>
+			</div>
+
+			<div class="service-icons-container" data-title="Hosting and Support">
+				<div class="icon" data-title="Hosting and Support" data-description="<p>Manaty can assess your needs and recommend the right service delivery model for specific systems and workloads. Then, we can migrate your applications and combine new cloud hosting and infrastructures with existing systems for a more manageable hybrid environment.</p>
+                  <p> Our in-depth security strategies also streamline system and data protection for you. As a result, you can preserve existing investments and adopt new IT delivery models to support your business, and worry less about security. </p>
+                  <p> Our experts love to work with : </p>
+                  <ul>
+                      <li>Jenkins Continuous Integration and Continuous Delivery, using reusable Jenkins Pipelines and Functions</li>
+                      <li>GitLab, on premise git repository hosting</li>
+                      <li>Elasticsearch, a distributed fault tolerant scalable search engine for logs, events and document.</li>
+                      <li>Kibana, lets you view, filter and search all logs and events that have been written to Elasticsearch</li>
+                      <li>Postgres / MariaDB Databases</li>
+                      <li>Prometheus Service, for monitoring, metrics and alerting system with a time series database</li>
+                      <li>Grafana Rich, a metrics dashboard and graph editor for Prometheus and InfluxDB</li>
+                      <li>WildFly / Jboss  JavaEE application server</li>
+                      <li>Docker Container, runtime, tooling and images registry</li>
+                      <li>Selenuim Test Automation for Web Applications</li>
+                      <li>Jmeter Test Load Automation</li>
+                      <li>SoapUI SOAP and REST Test Automation</li>
+                  </ul>">
+					<img src="images/icon_cloud.png" alt="" class="img-responsive">
+				</div>
+				<h1> Hosting and Support</h1>
+			</div>
+
+		</div>
+		<!-- mobile version-->
+		<div class="services-icons d-col-block d-md-none">
 			<div class="service-icons-container" data-title="Studies, conception & proofs of concept" data-toggle="modal" data-target="#modalServices">
 				<div class="icon" data-description="<p>  Manaty federates more than thirty specialists of software development around the world. Most of them are seniors with more than 10 years of experience with both technical and functional expertise in various fields (Java, JavaScript, PHP, Android, iOs; SQL and NoSQL, Reporting, data mining,  Cloud solutions…) and industries (Telecom, Media, Finance, Retail, Health…). </p>  <p> Some of our experts are PhD researchers that can offer their services and knowledge for your research and study needs. We can counsel you or even realize a complete and precise study on your subject.  </p>  <p>  We received a french certification for R&D studies that is valid until 2019 (certification CIR).</p>"
 				    data-title="Studies, conception & proofs of concept">
