working on google forms

--- a/index.html
+++ b/index.html
@@ -567,23 +567,27 @@
         </div>
 	</section>
 	<!-- END CLIENTS SECTION -->
+	<!--<script type="text/javascript">var submitted=false;</script>
+	<iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {console.log('submitted: ' + submitted); window.location='http://www.google.com';}"></iframe>-->
+
 	<a name="contact"></a>
 	<section class="contactus" id="contactus">
 		<div class="container text-content" >
 			<div class="text-container center help">
                 <h1 class="uppercase darkgreen"> Let's see how we can help you  </h1>
             </div>
-			<form data-request="contactform::onSend" data-request-validate data-request-flash  id="contact-form">
+			<!--<form action="https://docs.google.com/forms/d/e/1FAIpQLSchd48oMy8B0wMaV9T5E645Hk_lqCAEMsAyH2cOeNUDUnNyPQ/formResponse" method="post" target="hidden_iframe" onsubmit="submitted=true;">-->
+			<form action="https://docs.google.com/forms/d/e/1FAIpQLSchd48oMy8B0wMaV9T5E645Hk_lqCAEMsAyH2cOeNUDUnNyPQ/formResponse">
 				<div class="row">
 					<div class="col-12 col-md-4">
 						<div class="form-group">
-							<input class="form-control" type="text" placeholder="Full name *" name="fullname">
+							<input class="form-control" type="text" name="entry.1588310062" placeholder="Full name *">
 						</div>
 
 					</div>
 					<div class="col-12 col-md-4">
 						<div class="form-group">
-							<input class="form-control" type="text" placeholder="Email *" name="email">
+							<input class="form-control" type="text" placeholder="Email *" name="entry.1684797069">
 						</div>
 					</div>
 					<div class="col-12 col-md-4 d-none d-md-block">
@@ -595,12 +599,12 @@
 				<div class="row">
 					<div class="col-12 col-md-4">
 						<div class="form-group">
-							<input class="form-control" type="text" placeholder="Company" name="company_name">
+							<input class="form-control" type="text" placeholder="Company" name="entry.851180507">
 						</div>
 					</div>
 					<div class="col-12 col-md-4">
 						<div class="form-group">
-							<input class="form-control" type="text" placeholder="Phone" name="phonenumber">
+							<input class="form-control" type="text" placeholder="Phone" name="phonenumber" name="entry.1083861874">
 						</div>
 					</div>
 					<div class="col-12 col-md-4 d-none d-md-block">
@@ -616,12 +620,12 @@
 				<div class="row">
                     <div class="col-12 col-md-4">
                         <div class="form-group">
-                            <input class="form-control" type="text" placeholder="Location" name="location">
+                            <input class="form-control" type="text" placeholder="Location" name="entry.897519903">
                         </div>
                     </div>
                     <div class="col-12 col-md-4">
                         <div class="form-group">
-                            <input class="form-control" type="text" placeholder="Skype" name="skypeID">
+                            <input class="form-control" type="text" placeholder="Skype" name="entry.1769045231">
                         </div>
                     </div>
 					<div class="col-12 col-md-4 d-none d-md-block">
@@ -637,7 +641,7 @@
 				<div class="row">
                     <div class="col-12 col-md-8">
                         <div class="form-group">
-                            <textarea class="form-control" rows="10" placeholder="Message" name="content"></textarea>
+                            <textarea class="form-control" rows="10" placeholder="Message" name="entry.1301760924"></textarea>
                             <span data-validate-for="content">Please enter your content</span>
                         </div>
                     </div>
