reset form after submission

--- a/index.html
+++ b/index.html
@@ -568,7 +568,8 @@
 	</section>
 	<!-- END CLIENTS SECTION -->
 	<script type="text/javascript">var submitted=false;</script>
-	<iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {window.location.href = window.location.href;}"></iframe>
+	<iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {resetForms()}"></iframe>
+
 
 	<a name="contact"></a>
 	<section class="contactus" id="contactus">
@@ -576,7 +577,8 @@
 			<div class="text-container center help">
                 <h1 class="uppercase darkgreen"> Let's see how we can help you  </h1>
             </div>
-			<form action="https://docs.google.com/forms/d/e/1FAIpQLSchd48oMy8B0wMaV9T5E645Hk_lqCAEMsAyH2cOeNUDUnNyPQ/formResponse" method="post" target="hidden_iframe" accept-charset="UTF-8" onsubmit="validate()">
+
+			<form id="myForm" action="https://docs.google.com/forms/d/e/1FAIpQLSchd48oMy8B0wMaV9T5E645Hk_lqCAEMsAyH2cOeNUDUnNyPQ/formResponse" method="post" target="hidden_iframe" accept-charset="UTF-8" onsubmit="validate()">
 				<div class="row">
 					<div class="col-12 col-md-4">
 						<div class="form-group">
